# FridgeManager

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  FridgeManager.cpp  FridgeManager.h  Main.qml  Product.h  ProtobufSerializer.cpp  ProtobufSerializer.h  QuantityDialog.qml  README.md  main.cpp  product.proto  qml.qrc  Новый файл
.github/workflows/: build.yml
package/DEBIAN/: control  postinst  prerm
scripts/: postinst.sh  prerm.sh
